--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
 
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-12", style="max-width:700px; word-wrap:break-word;">
-            <h2>Anzeichen einer beginnenden Demenz werden zu selten erkannt</h2>
-            <p>
-                Leichte kognitive Störungen als Vorstufen von Demenzerkrankungen werden immer noch zu selten erkannt. 
-                Die Grafik zeigt den Anteil der Versicherten mit einer Diagnose in % nach dem Jahr.  
-            </p>
-            <div id = "my_dataviz"></div>
-            <div>
+    <div class="topnav">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12", style="max-width:700px; word-wrap:break-word;">
+                <h2>Anzeichen einer beginnenden Demenz werden zu selten erkannt</h2>
                 <p>
-                    Originalgrafik und Daten stammen von der Internetpräsenz des <i>Zentralinstituts für die kassenärztliche Versorgung</i> (22.09.2020),  
-                    <a href="https://www.zi.de/presse/grafikdesmonats/">Grafik des Monats September 2020</a>. 
+                    Leichte kognitive Störungen als Vorstufen von Demenzerkrankungen werden immer noch zu selten erkannt. 
+                    Die Grafik zeigt den Anteil der Versicherten mit einer Diagnose in % nach dem Jahr.  
                 </p>
+                <div id = "my_dataviz"></div>
+                <div>
+                    <p>
+                        Originalgrafik und Daten stammen von der Internetpräsenz des <i>Zentralinstituts für die kassenärztliche Versorgung</i> (22.09.2020),  
+                        <a href="https://www.zi.de/presse/grafikdesmonats/">Grafik des Monats September 2020</a>. 
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-<!-- Load d3.js & color scale-->
-<script src="https://d3js.org/d3.v4.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<!-- Custom scripts containing the visualization-->
-<script src="js/all.js"></script>
+    <!-- Load d3.js & color scale-->
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <!-- Custom scripts containing the visualization-->
+    <script src="js/all.js"></script>
 </body>
 </html>
