--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="topnav">
+         <a class="active" href="index.html">Home</a>
     </div>
     <div class="container">
         <div class="row">
